scss/app.scss
@import "settings";
@import "foundation";

// Resets
ul a li {
  list-style: none;
}

.projects h1, .projects h4 {
  margin-top: 0;
}

h3 {
  font-family: $font-family-serif;
}

h6 {
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 0.8rem;
}

.projects a {
  color: inherit;
}

.buffer {
  margin: 12rem;
}
// Custom

#home .projects .row {
  margin: 24rem 0;
}

.project img {
  box-shadow: 0px 2px 3px 2px rgba(0,0,0, 0.05);
  border: 1px solid #eee;
  border-radius: .26rem;
}

header {
  background-color: rgba(255,255,255,0.95);
  height: 45px;
  position: fixed;
  top: 0;
  transition: top 0.2s, background-color 300ms linear;
  width: 100%;
}

header .glass {
  background-color: rgba(255,255,255,0);
}

.headroom {
  transition: transform 400ms ease-out, background-color 500ms ease-out;
  z-index: 3;
}

.headroom--pinned {
  transform: translateY(0%);
  
}

.headroom--unpinned {
  transform: translateY(-100%);
}

.headroom--top {
  background-color: rgba(255,255,255,0);
  opacity: .65;
  transition: opacity 300ms linear, box-shadow 400ms linear, background-color 300ms linear;
  &:hover {
    opacity: 1.0;
  }
}

.headroom--not-top {
  box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
}

.headroom--top nav {
  background-color: rgba(255,255,255,0);
}

.dark-cover .headroom--top .top-bar-section li:not(.has-form) a:not(.button) {
  
  color: $white;
}

.headroom--top .top-bar-section ul li {
  background-color: rgba(255,255,255,0);
}

.top-bar-section li.active:not(.has-form) a:not(.button) {
  background-color: $primary-color;
}

.dark-cover .headroom--top nav h1 {
  color: $white;
}

.name h1 {
  font-weight: bold;
}

nav h6 {
  margin: 0;
  line-height: 45px;
}

.brief h6 {
  margin-top: 6rem;
}

.cover h1 {
  margin-top: 0;
}

.brief {
  margin-bottom: 9rem;
}

.project .image {
  margin: 2rem 0 3rem 0;
  position: relative;
}

.cover {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#dp-charting .cover,
#dp-dashboarding .cover,
#dp-onboarding .cover {
  background: #36495B;
  h1, h4 {
    color: $white;
  }
 }

.light-text {
  opacity: .6;
}

.caption {
  margin-top: 6px;
  font-size: .9rem;
  @extend .light-text;
}

@media #{$large-up} {
  .caption {
    position: absolute;
    right: -11rem;
    top: 0;
    margin-top: 0;
  }
}

.tiles li div {
  height: 9rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.tiles li div h6 {
  margin: 0;
}

.tiles li {
  border: 4px solid $oil;
}

.image.overlay img {
  width: 100%;
  vertical-align: middle;
}

.image.overlay:after, .image:before {
  position: absolute;
  opacity: 0.5;
  transition: all 0.5s;
}

.image.overlay:after {
  content: '\A';
  width: 100%; height: auto;
  top:0;
  left: 0;
  background: #36495B;
}

.image.overlay:before {
  content: '';
  width: 100%;
  height: 100%;
  color: $white;
  z-index: 1;
  bottom: 0;
  padding: 4px 10px;
  text-align: center;
  background: #36495B;
  opacity: 0.95;
  box-sizing: border-box;
  -moz-box-sizing:border-box;
}

.image.overlay:hover:after, .image.overlay:hover:before {
  opacity: 0;
}


.image.overlay .text {
  z-index: 2;
  position: absolute;
  bottom: 40%;
  width: 100%;
  text-align: center;
}

.image.overlay .text h6, .image.overlay .text p {
  color: $white;
}

.image.overlay:hover h6, .image.overlay:hover p {
  opacity: 0;
}

hr {
  margin-top: 3rem;
}

footer {
  margin: 1rem 0 6rem 0;
}

/* code for animated blinking cursor */
.typed-cursor {
    opacity: 1;
    font-weight: 100;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    -ms-animation: blink 0.7s infinite;
    -o-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
    color: $primary-color;
}
@keyframes blink {
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

@-webkit-keyframes blink {
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink {
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-ms-keyframes blink {
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-o-keyframes blink {
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

// Or selectively include components
// @import
//   "foundation/components/accordion",
//   "foundation/components/alert-boxes",
//   "foundation/components/block-grid",
//   "foundation/components/breadcrumbs",
//   "foundation/components/button-groups",
//   "foundation/components/buttons",
//   "foundation/components/clearing",
//   "foundation/components/dropdown",
//   "foundation/components/dropdown-buttons",
//   "foundation/components/flex-video",
//   "foundation/components/forms",
//   "foundation/components/grid",
//   "foundation/components/inline-lists",
//   "foundation/components/joyride",
//   "foundation/components/keystrokes",
//   "foundation/components/labels",
//   "foundation/components/magellan",
//   "foundation/components/orbit",
//   "foundation/components/pagination",
//   "foundation/components/panels",
//   "foundation/components/pricing-tables",
//   "foundation/components/progress-bars",
//   "foundation/components/reveal",
//   "foundation/components/side-nav",
//   "foundation/components/split-buttons",
//   "foundation/components/sub-nav",
//   "foundation/components/switches",
//   "foundation/components/tables",
//   "foundation/components/tabs",
//   "foundation/components/thumbs",
//   "foundation/components/tooltips",
//   "foundation/components/top-bar",
//   "foundation/components/type",
//   "foundation/components/offcanvas",
//   "foundation/components/visibility";

